HVAC Backup 2/objects/Rate_Card__c(1).object
<CustomObject>
    <fields>
        <fullName>Family_Code__c</fullName>
        <label>Family Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Common__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Common?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sub_Family_Code__c</fullName>
        <label>Sub Family Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Visiting Charges</fullName>
                </value>
                <value>
                    <fullName>Labour Charges</fullName>
                </value>
                <value>
                    <fullName>Breakdown Charges</fullName>
                </value>
                <value>
                    <fullName>Installation Charges</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Rate Card</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Family_Code__c</columns>
        <columns>Sub_Family_Code__c</columns>
        <columns>Rate__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rate Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>